Added command to fix some common summary errors.

--- a/tools/DocStat/DocStat/DocStat.csproj
+++ b/tools/DocStat/DocStat/DocStat.csproj
@@ -38,6 +38,7 @@
       <Link>Options.cs</Link>
     </Compile>
     <Compile Include="comparereport.cs" />
+    <Compile Include="fixsummaries.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="System.Xml.Linq" />
