mdoc: Preserving remarks created post-factum on import Added attribute "overwrite" for the following elements: remarks, summary, value, returns, param, typeparam, altmember, exception, permission Closes #97

--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,5 @@ obj
 *.metagen
 *.pdb
 mdoc/Test/actual_statistics.txt
+mdoc/Test/test-overwrite-attribute/SomeClass.xml
+mdoc/Test/test-overwrite-attribute/SomeClass.dll
