mdoc: EII events are now documented. Closes #106

--- a/mdoc/Makefile
+++ b/mdoc/Makefile
@@ -540,4 +540,4 @@ check-doc-tools-update: check-monodocer-since-update \
 	check-mdoc-validate-update 
 
 check: nunit check-doc-tools 
-
+	@echo "mdoc Tests Complete!"
