--- a/monodoc/Makefile
+++ b/monodoc/Makefile
@@ -2,3 +2,4 @@ CONFIGURATION = Release
 
 check: 
 	mono ../packages/NUnit.ConsoleRunner.3.6.0/tools/nunit3-console.exe Test/bin/$(CONFIGURATION)/Monodoc.Test.dll
+	@echo "monodoc Tests Complete!"
