mdoc: Resolver now loads the latest version for 0.0.0.0. Lack of doing this was causing a stackoverflow error, due to a circular set of references with type forwards. Closes #134 ... again

--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,8 @@ obj
 .vs
 *.metagen
 *.pdb
+*.psess
+*.vspx
 mdoc/Test/actual_statistics.txt
 mdoc/Test/test-overwrite-attribute/SomeClass.xml
 mdoc/Test/test-overwrite-attribute/SomeClass.dll
