--- a/mdoc/mdoc.csproj
+++ b/mdoc/mdoc.csproj
@@ -91,6 +91,11 @@
     <Compile Include="Mono.Documentation\Updater\Statistics\StatisticsStorage.cs" />
     <Compile Include="Mono.Documentation\Util\ApiStyle.cs" />
     <Compile Include="Mono.Documentation\Updater\DocUtils.cs" />
+    <Compile Include="Mono.Documentation\Util\AttachedEventDefinition.cs" />
+    <Compile Include="Mono.Documentation\Util\AttachedEntitiesHelper.cs" />
+    <Compile Include="Mono.Documentation\Util\AttachedEventReference.cs" />
+    <Compile Include="Mono.Documentation\Util\AttachedPropertyDefinition.cs" />
+    <Compile Include="Mono.Documentation\Util\AttachedPropertyReference.cs" />
     <Compile Include="Mono.Documentation\Util\CecilExtensions.cs" />
     <Compile Include="Mono.Documentation\Util\NativeTypeManager.cs" />
     <Compile Include="Mono.Rocks\ObjectRocks.cs" />
