[mdoc] Implementation details are now shown on members Based on the pull request #170 Node <Implements> with subnodes <InterfaceMember> show which member(s) of interface(s) is(are) implemented <Implements> and <InterfaceMember> are added to monodoc-ecma.xsd Added the integration test `check-monodocer-members-implementation`
Closes #158

--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,4 @@ obj
 mdoc/Test/actual_statistics.txt
 mdoc/Test/test-overwrite-attribute/SomeClass.xml
 mdoc/Test/test-overwrite-attribute/SomeClass.dll
+mdoc/Test/test-nuget-information/input_data/
