--- a/mdoc/Test/TestInterfaceImplementation/TestInterfaceImplementation.csproj
+++ b/mdoc/Test/TestInterfaceImplementation/TestInterfaceImplementation.csproj
@@ -55,7 +55,9 @@
     <Compile Include="Interface5.cs" />
     <Compile Include="Interface6.cs" />
     <Compile Include="Interface7.cs" />
+    <Compile Include="IScorable.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ScorableBase.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
