--- a/mdoc/mdoc.nuspec
+++ b/mdoc/mdoc.nuspec
@@ -4,12 +4,13 @@
     <id>mdoc</id>
     <version>5.3.5.1</version>
     <title>mdoc</title>
-    <authors>Joel Martinez</authors>
-    <owners>Xamarin</owners>
+    <authors>Microsoft</authors>
+    <owners>Microsoft</owners>
     <projectUrl>https://github.com/mono/api-doc-tools</projectUrl>
-    <requireLicenseAcceptance>false</requireLicenseAcceptance>
+    <licenseUrl>https://github.com/mono/api-doc-tools/blob/master/LICENSE.md</licenseUrl>
+    <requireLicenseAcceptance>true</requireLicenseAcceptance>
     <description>.NET API Documentation toolchain</description>
-    <copyright>Copyright 2017</copyright>
+    <copyright>© Microsoft Corporation. All rights reserved.</copyright>
     <tags>mdoc documentation ecmaxml dotnet .net C# F# VB.NET</tags>
   </metadata>
   <files>
