--- a/mdoc/mdoc.csproj
+++ b/mdoc/mdoc.csproj
@@ -132,6 +132,7 @@
     <Compile Include="Mono.Documentation\Updater\Frameworks\AssemblySet.cs" />
     <Compile Include="Mono.Documentation\Updater\Frameworks\MDocResolver.cs" />
     <Compile Include="Mono.Documentation\MDocUpdater.cs" />
+    <Compile Include="Mono.Documentation\Updater\Frameworks\MDocMetadataResolver.cs" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Resources\defaulttemplate.xsl">
