--- a/mdoc/mdoc.Test/packages.config
+++ b/mdoc/mdoc.Test/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="NUnit" version="2.6.4" targetFramework="net461" />
+  <package id="FSharp.Core" version="4.3.4" targetFramework="net461" />
   <package id="Mono.Cecil" version="0.10.0-beta5" targetFramework="net45" />
+  <package id="NUnit" version="2.6.4" targetFramework="net461" />
 </packages>
