--- a/mdoc/mdoc.Test/mdoc.Test.csproj
+++ b/mdoc/mdoc.Test/mdoc.Test.csproj
@@ -66,6 +66,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BasicFormatterTests.cs" />
+    <Compile Include="BasicTests.cs" />
     <Compile Include="CppWinRtMembersTests.cs" />
     <Compile Include="CppWinRtFormatterTests.cs" />
     <Compile Include="FSharp\BasicFSharpFormatterTests.cs" />
@@ -78,7 +79,9 @@
     <Compile Include="FSharp\FSharpUsageFormatterTests.cs" />
     <Compile Include="JsMemberFormatterTests.cs" />
     <Compile Include="JsUsageFormatterTests.cs" />
+    <Compile Include="MDocUpdaterTests.cs" />
     <Compile Include="SampleClasses\SomeDelegate.cs" />
+    <Compile Include="SampleClasses\Span.cs" />
     <Compile Include="SampleClasses\TestClass.cs" />
     <Compile Include="SampleClasses\SomeGenericClass.cs" />
     <Compile Include="SampleClasses\WebHostHiddenTestClass.cs" />
@@ -90,6 +93,7 @@
     <Compile Include="SampleClasses\TestClassTwo.cs" />
     <Compile Include="SampleClasses\SomeStruct.cs" />
     <Compile Include="SampleClasses\WebHostHiddenAttribute.cs" />
+    <Compile Include="StatisticsTests.cs" />
     <Compile Include="VBFormatterTests.cs" />
     <Compile Include="FrameworkAlternateTests.cs" />
     <Compile Include="XmlUpdateTests.cs" />
