Allow `mdoc assemble` to assemble docs from a single framework #194
Added fx/framework CLI parameter for the assemle command
Filter out types, which are not mentioned in the framework file
Appropriately filter any parameter that has a @FrameworkAlternate attribute
Added unit tests for assemble single framework mode
Added unit tests if no framework passed

Closes #194

--- a/mdoc/mdoc.Test/mdoc.Test.csproj
+++ b/mdoc/mdoc.Test/mdoc.Test.csproj
@@ -69,6 +69,7 @@
     <Compile Include="BasicTests.cs" />
     <Compile Include="CppWinRtMembersTests.cs" />
     <Compile Include="CppWinRtFormatterTests.cs" />
+    <Compile Include="FrameworkIndexHelperTests.cs" />
     <Compile Include="FSharp\BasicFSharpFormatterTests.cs" />
     <Compile Include="CppCxFormatterMembersTests.cs" />
     <Compile Include="CppFormatterTests.cs" />
@@ -79,6 +80,7 @@
     <Compile Include="FSharp\FSharpUsageFormatterTests.cs" />
     <Compile Include="JsMemberFormatterTests.cs" />
     <Compile Include="JsUsageFormatterTests.cs" />
+    <Compile Include="MDocFileSourceTests.cs" />
     <Compile Include="MDocUpdaterTests.cs" />
     <Compile Include="SampleClasses\SomeDelegate.cs" />
     <Compile Include="SampleClasses\Span.cs" />
@@ -96,6 +98,7 @@
     <Compile Include="StatisticsTests.cs" />
     <Compile Include="VBFormatterTests.cs" />
     <Compile Include="FrameworkAlternateTests.cs" />
+    <Compile Include="XmlConsts.cs" />
     <Compile Include="XmlUpdateTests.cs" />
   </ItemGroup>
   <ItemGroup>
