Adding "FrameworkAlternate" and "Index" to XSD
Updated to add attributes to MemberSignature, TypeSignature, Parameter, TypeParameter.
Additionally, added validation unit tests, and reformatted the mdoc validator subcommand for future-proof maintainability.
Closes #262

--- a/mdoc/mdoc.csproj
+++ b/mdoc/mdoc.csproj
@@ -120,7 +120,7 @@
     <Compile Include="Mono.Documentation\monodocs2slashdoc.cs" />
     <Compile Include="Mono.Documentation\msitomsx.cs" />
     <Compile Include="Mono.Documentation\normalize.cs" />
-    <Compile Include="Mono.Documentation\validate.cs" />
+    <Compile Include="Mono.Documentation\MDocValidator.cs" />
     <Compile Include="Mono.Documentation\webdoc.cs" />
     <Compile Include="Mono.Documentation\XhtmlWriter.cs" />
     <Compile Include="Mono.Documentation\exceptions.cs" />
