mdoc: Incorrect signatures generated for return types
Removed namespace when return type is generic
Added integration tests
Added unit test
Add RefType attribute to ReturnType element

Closes #230

--- a/mdoc/mdoc.Test/mdoc.Test.csproj
+++ b/mdoc/mdoc.Test/mdoc.Test.csproj
@@ -84,6 +84,7 @@
     <Compile Include="JsUsageFormatterTests.cs" />
     <Compile Include="MDocFileSourceTests.cs" />
     <Compile Include="MDocUpdaterTests.cs" />
+    <Compile Include="SampleClasses\ReadOnlySpan.cs" />
     <Compile Include="SampleClasses\SomeDelegate.cs" />
     <Compile Include="SampleClasses\SomeInterface.cs" />
     <Compile Include="SampleClasses\Span.cs" />
